--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     src="https://code.jquery.com/jquery-3.2.1.min.js"
     integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
+    <script type="text/javascript" src="family.json"></script>
     <script src="common.js"></script>
 </body>
 </html>  
