add new preloader for mobile and desctop version. fix calendar style

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 <body>
 
-    <div id="hellopreloader"><div id="hellopreloader_preload"></div></div>
-
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
+    
     
     <main class="container">          
         <div class="inline-flex">
