--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
         </div>
         <div class="section">
             <div class="calendar">
-                Тут буит колендарь
+                <div class="free-month"></div>                
             </div>
-        </div>        
+        </div>  
+        <div class="section">
+            <div class="calendar">
+                <div class="four-month"></div>
+            </div>
+        </div>       
     </div>
 
 
@@ -40,6 +45,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="  crossorigin="anonymous"></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.5/jquery.fullpage.js"></script>
     <script type="text/javascript" src="family.json"></script>
+    <script src="calendar.js"></script>   
     <script src="time.js"></script>   
     <script src="common.js"></script>  
     <script  src='preloader.js'></script>
