--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<meta property="og:image" content="img/favicon/favicon.ico">
-	<link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
+	<meta property="og:image" content="dist/img/favicon/favicon.ico">
+	<link rel="shortcut icon" href="dist/img/favicon/favicon.ico" type="image/x-icon">
 	<!-- <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png"> -->
@@ -26,7 +26,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=cyrillic" rel="stylesheet">
-	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="dist/css/main.min.css">
 </head>
 
 <body>
@@ -52,7 +52,7 @@
         </div>
     </div>
 	
-	<script type="text/javascript" src="data/family.json"></script>
-	<script src="js/scripts.min.js"></script>
+	<script type="text/javascript" src="dist/data/family.json"></script>
+	<script src="dist/js/scripts.min.js"></script>
 </body>
 </html>
